--- a/Webpages/Thank you page.html
+++ b/Webpages/Thank you page.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
 * {box-sizing: border-box;}
@@ -93,30 +95,228 @@ body {
 
 </style>
 </head>
-<body background="../Images/background for all.png">
-    <div class="topnav" style="padding-left: 50px;">
-        <p style="color:white;font-size: x-large;"><strong>Green Grocery</strong></p>
-        <form class="example">
-            <input type="text" placeholder="Search..">
-            <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
-          <a href="About.html" style="color:whitesmoke; padding-right: 50px;">About</a>
-          <a href="Contact.html" style="color:whitesmoke; padding-right: 50px;">Contact</a> 
-          <a href="Category.html" style="color:whitesmoke; padding-right: 50px; ">Category</a>
-          <a href="../index.html" style="color:whitesmoke; padding-right: 50px;">Home</a>
-          
+<body style="background-color: #ffffff;">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item mx-3">
+            <a class="nav-link " aria-current="page" href="/Grocery-Website/index.html">Home</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link " href="Category.html">Category</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link " href="Contact.html">Contact</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link" href="About.html">About</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link" href="Cart.html">Cart</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-   <div><h1 style="color: rgb(0,128,55);margin-left: 50px; font-size: 75px; text-align: center;">Thank you for contacting us</h1>
-    <p style="padding-bottom: 250px; margin-left: 50px; margin-right: 100px; font-size: x-large; text-align: center;" > Our customer service team will contact you soon</p>
-   </div>
+  </nav>
 <!--Footer-->
-<footer style="padding-left: 50px; background-color: rgb(0,128,55); height: 145px;">
-  <p style="padding: 10px; color: white;">Author: Anirudh Sannidhi<br>
-  <img src="../Footer links/Gmail.png" style="height: 20px; width: 20px;"><a style="color: white;" href="#MailID">E-mail</a><br>
-  <img src="../Footer links/Facebook.jpg" style="height: 20px; width: 20px;"><a style="color: white;" href="#Facebook">Facebook</a><br>
-  <img src="../Footer links/Insta.png" style="height: 20px; width: 20px;"><a style="color: white;" href="#Instagram">Instagram</a>
-  <p style="text-align: center; color: white;">Created by Anirudh Sannidhi© All Rights Reserved 2022</p>
-</p>
+<style>
+  #newsletter {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-image: url(images/banner/b14.png);
+    background-repeat: no-repeat;
+    background-position: 20% 30%;
+    background-color: #041e42;
+  }
+
+  #newsletter h4 {
+    font-size: 22px;
+    font-weight: 700;
+    color: #fff;
+  }
+
+  #newsletter p {
+    font-size: 14px;
+    font-weight: 600;
+    color: #767788;
+  }
+
+  #newsletter p span {
+    color: #ffbd27;
+  }
+
+  #newsletter .form {
+    display: flex;
+    width: 40%;
+  }
+
+  #newsletter input {
+    height: 3.125rem;
+    padding: 0 1.25em;
+    font-size: 14px;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    outline: none;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+
+  }
+
+  #newsletter button {
+    background-color: #088178;
+    color: #fff;
+    white-space: nowrap;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  footer .col {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
+  }
+
+  footer .logo {
+    margin-bottom: 30px;
+  }
+
+  footer h4 {
+    font-size: 14px;
+    padding-bottom: 20px;
+  }
+
+  footer p {
+    font-size: 13px;
+    margin: 0 0 8px 0;
+  }
+
+  footer a {
+    font-size: 13px;
+    text-decoration: none;
+    color: #222;
+    margin-bottom: 10px;
+  }
+
+  footer .follow {
+    margin-top: 20px;
+  }
+
+  footer .follow i {
+    color: #465b52;
+    padding-right: 4px;
+    cursor: pointer;
+  }
+
+  footer .install .row img {
+    border: 1px solid #088178;
+    border-radius: 6px;
+    width: 180px;
+    height: 80px;
+  }
+
+  footer .install img {
+    margin: 10px 0 15px 0;
+  }
+
+  footer .follow i:hover,
+  footer a:hover {
+    color: #088178;
+  }
+
+  footer .copyright {
+    width: 100%;
+    text-align: center;
+  }
+</style>
+<section id="newsletter" class="section-p1">
+  <div class="newstext">
+    <h4>Sign Up for Newsletter</h4>
+    <p>Get E-mail updates about our latest shop and <span>special offers</span></p>
+  </div>
+  <div class="form">
+    <input type="text" placeholder="Your Email address">
+    <button class="normal">Sign Up</button>
+  </div>
+</section>
+
+<footer class="section-p1">
+  <div class="col">
+    <img class="logo" src="images/logo.png" alt="">
+    <h4>Contact</h4>
+    <p><strong>Address: </strong> Hoshiarpur Road, Street 32, Punjab</p>
+    <p><strong>Phone: </strong> +91 97965 43732/(+91) 12873</p>
+    <p><strong>Hours: </strong> 10:00 - 18:00, Mon - Sat </p>
+    <div class="follow">
+      <h4>Follow us</h4>
+      <div class="icon">
+        <i class="bi bi-facebook"></i>
+        <i class="bi bi-twitter"></i>
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-pinterest"></i>
+        <i class="bi bi-youtube"></i>
+
+      </div>
+    </div>
+
+  </div>
+
+  <div class="col">
+    <h4>About</h4>
+    <a href="#">About Us</a>
+    <a href="#">Delivery Information</a>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Terms & Conditions</a>
+    <a href="#">Contact Us</a>
+  </div>
+
+  <div class="col">
+    <h4>My Account</h4>
+    <a href="#">Sign In</a>
+    <a href="#">View Cart</a>
+    <a href="#">My Wishlist</a>
+    <a href="#">Track My Order</a>
+    <a href="#">Help</a>
+  </div>
+
+  <div class="col install">
+    <h4>Install App</h4>
+    <p>From App Store or Google Play</p>
+    <p>Secured Payment Gateways</p>
+    <img src="images/pay/pay.png" alt="">
+  </div>
+
+  <div class="copyright">
+    <p>© 2021, HTML CSS Ecommerce Template</p>
+  </div>
 </footer>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+  *{
+    font-family: 'Spartan', sans-serif;
+
+  }
+</style>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"></script>
 </body>
 </html>
