--- a/Webpages/Vegetable.html
+++ b/Webpages/Vegetable.html
@@ -2,7 +2,13 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="./index.js"></script>
 <style>
 * {box-sizing: border-box;}
 
@@ -11,10 +17,22 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.topnav {
-  overflow: hidden;
-  background-color:rgb(0,128,55);
+.card:hover{
+  transform: scale(1.05);
+  box-shadow: 0 5px 10px gray, 0 2px 4px gray;
 }
+.card{
+  background: #fff;
+  border-radius: 5%;
+  box-shadow: 0 5px 10px gray, 0 2px 4px gray;
+  transition: .3s transform cubic-bezier(.155,1.105,.295,1.12),.3s box-shadow,.3s -webkit-transform cubic-bezier(.155,1.105,.295,1.12);
+}
+
+.card img{
+  height: 250px;
+}
+
+
 
 body {
   background-position: center;
@@ -22,89 +40,54 @@ body {
   background-size: cover;
 }
 
-.topnav a {
-  float: right;
-  display: block;
-  color: black;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: w;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: white;
-  color: white;
-}
 
 
 
 @media screen and (max-width: 600px) {
-  .topnav a, .topnav input[type=text] {
-    float: none;
-    display: block;
-    text-align: left;
-    width: 100%;
-    margin: 0;
-    padding: 14px;
-  }
+ 
  
 }
 * {
   box-sizing: border-box;
 }
 
-.topnav.form.example input[type=text] {
-  padding: 10px;
-  font-size: 17px;
-  border: 1px solid grey;
-  float: left;
-  width: 50%;
-  background: #f1f1f1;
-}
 
-.topnav.form.example button {
-  float: left;
-  width: 5%;
-  padding: 0;
-  background: #2196F3;
-  color: white;
-  font-size: 17px;
-  border: 1px solid grey;
-  border-left: none;
-  cursor: pointer;
-  margin: 0;
-}
-
-.topnav.form.example button:hover {
-  background: #0b7dda;
-}
-
-.topnav.form.example::after {
-  content: "";
-  clear: both;
-  display: table;
-}
 </style>
 </head>
-<body background="../Images/background for all.png">
-    <div class="topnav" style="padding-left: 50px;">
-        <p style="color:white;font-size: x-large;"><strong>Green Grocery</strong></p>
-        <form class="example">
-            <input type="text" placeholder="Search..">
-            <button type="submit"><i class="fa fa-search"></i></button>
-          </form>
-          <a href="About.html" style="color:whitesmoke; padding-right: 50px;">About</a>
-          <a href="Contact.html" style="color:whitesmoke; padding-right: 50px;">Contact</a> 
-          <a href="Category.html" style="color:whitesmoke; padding-right: 50px; ">Category</a>
-          <a href="../index.html" style="color:whitesmoke; padding-right: 50px;">Home</a>
-          
+<body style="background-color: #ffffff;">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">gROCIFY</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item mx-3">
+            <a class="nav-link " aria-current="page" href="/Grocery-Website/index.html">Home</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link " href="Category.html">Category</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link " href="Contact.html">Contact</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link" href="About.html">About</a>
+          </li>
+          <li class="nav-item mx-3">
+            <a class="nav-link" href="Cart.html">Cart</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
+  </nav>
+    
+
 <!--Cards-->
 <style>
   *
@@ -157,86 +140,129 @@ body {
             }
   </style>
   
-  <div class="row" style="padding-top: 30px; padding-bottom: 20px;">
-    <div class="column">
-      <div class="card">
-        <img src="../Vegetables/Potato.jpg" style="height: 120px; width: 120px;">
-        <p>Potato</p>
-        <p>Price: Rs.50/kg</p>
-        <a href="" class="green-button">Buy now</a>
+
+  <div class="d-flex flex-wrap justify-content-evenly my-5">
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Potato.jpg" alt="Card image">
+      <div class="card-body">
+        <h4 class="card-title">Potato</h4>
+        <p class="card-text">Price: Rs.50/kg</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>
+        </div>
       </div>
     </div>
-        <div class="column">
-          <div class="card">
-            <img src="../Vegetables/Tomato.jpg" style="height: 120px; width: 120px;">
-            <p>Tomato</p>
-            <p>Price: Rs.30/kg</p>
-            <a href="" class="green-button">Buy now</a>
-          </div>
+  
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Tomato.jpg" alt="Card image">
+      <div class="card-body">
+        <h4 class="card-title">Tomato</h4>
+        <p class="card-text">Price: Rs.30/kg</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>
+        </div>
+      </div>
     </div>
-    <div class="column">
-          <div class="card">
-            <img src="../Vegetables/Onion.jpg" style="height: 120px; width: 120px;">
-            <p>Onion</p>
-            <p>Price: Rs.40/kg</p>
-            <a href="" class="green-button">Buy now</a>
-          </div>
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Onion.jpg" alt="Card image">
+      <div class="card-body">
+        <h4 class="card-title">Onion</h4>
+        <p class="card-text">Price: Rs.40/kg</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>
         </div>
-        <div class="column">
-          <div class="card">
-            <img src="../Vegetables/Lady Finger.jpg" style="height: 120px; width: 120px;">
-            <p>Lady Finger</p>
-            <p>Price: Rs.40/kg</p>
-            <a href="" class="green-button">Buy now</a>
-           </div>
+      </div>
+    </div>
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Lady Finger.jpg" alt="Card image">
+      <div class="card-body" style="font-family: hurricane cursive;">
+        <h4 class="card-title">Lady Finger</h4>
+        <p class="card-text">Price: Rs.40/kg</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>
         </div>
+      </div>
+    </div>
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Cauliflower.jpg" alt="Card image">
+      <div class="card-body">
+        <h4 class="card-title">Cauliflower</h4>
+        <p class="card-text">Price: Rs.25/pc</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>  
+        </div>
+      </div>
+    </div>
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Brinjal.png" alt="Card image">
+      <div class="card-body">
+        <h4 class="card-title">Brinjal</h4>
+        <p class="card-text">Price: Rs.40/kg</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Bottle gourd.jpg" alt="Card image">
+      <div class="card-body">
+        <h4 class="card-title">Bottle Gourd</h4>
+        <p class="card-text">Price: Rs.20/pc</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Beans.jpg" alt="Card image">
+      <div class="card-body">
+        <h4 class="card-title">Beans</h4>
+        <p class="card-text">Price: Rs.30/kg</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+    <div class="card m-5" style="width:20rem">
+      <img class="card-img-top" src="../Vegetables/Lady Finger.jpg" alt="Card image">
+      <div class="card-body" style="font-family: hurricane cursive;">
+        <h4 class="card-title">Lady Finger</h4>
+        <p class="card-text">Price: Rs.40/kg</p>
+        <div class="d-flex justify-content-evenly">
+          <a href="" class="green-button">Buy now</a>
+          <button class="btn btn-primary add_to_cart">Add to Cart</button>
+        </div>
+      </div>
+    </div>
+  
   </div>
 
-    <div class="row" style="padding-top: 30px; padding-bottom: 20px;">
-    <div class="column">
-          <div class="card">
-            <img src="../Vegetables/Cauliflower.jpg" style="height: 120px; width: 120px;">
-            <p>Cauliflower</p>
-            <p>Price: Rs.25/pc</p>
-            <a href="" class="green-button">Buy now</a>
-          </div>
-    </div>
 
-    <div class="column">
-      <div class="card">
-        <img src="../Vegetables/Brinjal.png" style="height: 120px; width: 120px;">
-        <p>Brinjal</p>
-        <p>Price: Rs.40/kg</p>
-        <a href="" class="green-button">Buy now</a>
-      </div>
-    </div>
 
-    <div class="column">
-      <div class="card">
-        <img src="../Vegetables/Bottle gourd.jpg" style="height: 120px; width: 120px;">
-        <p>Bottle Gourd</p>
-        <p>Price: Rs.20/pc</p>
-        <a href="" class="green-button">Buy now</a>
-      </div>
-    </div>
 
-    <div class="column">
-        <div class="card">
-            <img src="../Vegetables/Beans.jpg" style="height: 120px; width: 120px;">
-            <p>Beans</p>
-            <p>Price: Rs.30/kg</p>
-            <a href="" class="green-button">Buy now</a>
-        </div>
-    </div>
-  </div>   
+
+
+ 
     <!--Footer-->
-<footer style="padding-left: 50px; background-color: rgb(0,128,55); height: 145px;">
-  <p style="padding: 10px; color: white;">Author: Anirudh Sannidhi<br>
-  <img src="../Footer links/Gmail.png" style="height: 20px; width: 20px;"><a style="color: white;" href="#MailID">E-mail</a><br>
-  <img src="../Footer links/Facebook.jpg" style="height: 20px; width: 20px;"><a style="color: white;" href="#Facebook">Facebook</a><br>
-  <img src="../Footer links/Insta.png" style="height: 20px; width: 20px;"><a style="color: white;" href="#Instagram">Instagram</a>
-  <p style="text-align: center; color: white;">Created by Anirudh Sannidhi© All Rights Reserved 2022</p>
-</p>
-</footer>
+
+    <div class="e_grocery_footer"></div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="../footer.js"></script>
+    <style>
+    @import url('https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap');
+    *{
+      font-family: 'Spartan', sans-serif;
+
+    }
+  </style>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
